> Created Layout for New Journal Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Daily Journal App</string>
+    <string name="new_journal_activity_title">Add New Journal</string>
 </resources>
