--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Daily Journal App</string>
     <string name="new_journal_activity_title">Add New Journal</string>
+    <string name="view_activity_title">View Journal</string>
 </resources>
